Briefly describe the updates you made here

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Ernesto Araya Valdivia
-position: Postdoc researcher at Modal Team
-affiliation: Inria Lille - Nord Europe
+position: Postdoctoral researcher at Bavarian AI Chair for Foundations of Artificial Intelligence
+affiliation: LMU Munich
 affiliation_link:
-email: ernesto-javier.araya-valdivia (at) inria.fr
+email: araya@math.lmu.de
 google_scholar: https://scholar.google.com/citations?hl=en&user=kXD5AegAAAAJ
 cv_link:
 github_link: https://github.com/ErnestoArayaV/
